--- a/.github/workflows/githubpages-Deploy.yml
+++ b/.github/workflows/githubpages-Deploy.yml
@@ -38,5 +38,5 @@ jobs:
         env:
           user_name: "nettemsarath"
           user_email: "nettemsarath1@gmail.com"
-          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          github_token: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
           repository: ${{ github.repository }}
